2.0.0-M04
---------
o Fixes #844 - Label predicate do not work on optional nodes that are null
o Introduced a new experimental PEG parser (Parboiled)

2.0.0-M03
---------
o Added startNode()/endNode()
o Fixes #780 - Queries with literal collections fail against schema indexes
o Make Cypher execution results closable 
o Adds Cypher label scan hint
o Removes alternative WITH syntax in Cypher
o Fixes bug with UNION text output

2.0.0-M02
---------
o Added MERGE clause
o MATCH now supports single-node patterns

2.0.0-M01
---------
o BREAKING CHANGE: It is no longer possible to use parameterized identifiers in START
o Added the possibility to set labels on and remove labels from nodes
o Now uses the labels specified in MATCH while matching
o Supports label matching with ("|" syntax) in MATCH
o Added label-based indexes
o Added UNION
o Added CASE
o Added index hints ("USING INDEX")
o START now is optional when using index hints or there is exactly one useable index
o Cypher now uses the label-based indexes to perform lookups
o Profiler now shows which entity producers have been chosen

1.9.2 (2013-07-16)
-----------------
o Fixes problem where Cypher would see changes while the query was running

1.9.1 (2013-06-24)
------------------
o Cypher execution results are now closeable
o Allow | to be used as a separator in foreach and extract+reduce

1.9.RC2 (2013-04-30)
--------------------
o Fixes problem when sending down custom queries to index providers

1.9.RC1 (2013-04-15)
--------------------
o Fixed #578 - problem with profiling queries that use LIMIT
o Fixes #550 - problem when using START after WITH
o Allows single node patterns in MATCH
o Fixes problem for some patterns and all-nodes start points
o Fixes #650 - issue when doing multiple aggregation expressions on the same identifier
o Added timestamp function

1.9.M05 (2013-03-05)
--------------------
o Fixes #450 - Predicates in WHERE are not evaluated correctly for certain patterns